--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,20 @@
+anyio==4.0.0
+APScheduler==3.6.3
 attrs==23.1.0
 Automat==22.10.0
+backports.zoneinfo==0.2.1
 certifi==2023.7.22
 cffi==1.15.1
 charset-normalizer==3.2.0
 constantly==15.1.0
 cryptography==41.0.3
 cssselect==1.2.0
+decorator==5.1.1
 exceptiongroup==1.1.3
 filelock==3.12.2
 h11==0.14.0
+httpcore==0.17.3
+httpx==0.24.1
 hyperlink==21.0.0
 idna==3.4
 incremental==22.10.0
@@ -26,24 +32,29 @@ pycparser==2.21
 PyDispatcher==2.0.7
 pyOpenSSL==23.2.0
 PySocks==1.7.1
+python-dotenv==1.0.0
+python-telegram-bot==13.0
+pytz==2023.3.post1
 queuelib==1.6.2
-requests==2.31.0
+requests==2.13.0
 requests-file==1.5.1
 Scrapy==2.10.0
 selenium==4.11.2
 service-identity==23.1.0
-six==1.16.0
+six==1.10.0
 sniffio==1.3.0
 sortedcontainers==2.4.0
 tldextract==3.4.4
+tornado==6.3.3
 trio==0.22.2
 trio-websocket==0.10.3
 Twisted==22.10.0
 typing-extensions==4.7.1
+tzdata==2023.3
+tzlocal==5.0.1
 undetected-chromedriver==3.5.3
 urllib3==2.0.4
 w3lib==2.1.2
 websockets==11.0.3
 wsproto==1.2.0
 zope.interface==6.0
-gunicorn
